--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </div>
 
     <div class="question">
-      <p>Q2. 部下の小さな努力や変化に気づき、言葉にして伝えている。</p>
+      <p>Q2. 日頃から部下の小さな努力や良い変化に気づき、言葉にして伝えるようにしている。</p>
       <input type="radio" name="q2" value="1" required>1
       <input type="radio" name="q2" value="2">2
       <input type="radio" name="q2" value="3">3
@@ -95,7 +95,7 @@
     </div>
 
     <div class="question">
-      <p>Q3. 部下は私の前で失敗を恐れず本音を話してくれる。</p>
+      <p>Q3. 私の前では、部下は失敗を恐れずに本音や正直な意見を話してくれていると感じる。</p>
       <input type="radio" name="q3" value="1" required>1
       <input type="radio" name="q3" value="2">2
       <input type="radio" name="q3" value="3">3
@@ -104,7 +104,7 @@
     </div>
 
     <div class="question">
-      <p>Q4. 耳の痛いフィードバックも率直に伝えている。</p>
+      <p>Q4. チームの成果のためなら、部下にとって耳の痛いフィードバックも、タイミングを見て率直に伝えている。</p>
       <input type="radio" name="q4" value="1" required>1
       <input type="radio" name="q4" value="2">2
       <input type="radio" name="q4" value="3">3
@@ -113,7 +113,7 @@
     </div>
 
     <div class="question">
-      <p>Q5. 問題行動に対して冷静に事実と改善点を叱ることができている。</p>
+      <p>Q5. 部下の行動に問題があった際、感情的に「怒る」のではなく、具体的な事実と改善点を冷静に「叱る」ことができている。</p>
       <input type="radio" name="q5" value="1" required>1
       <input type="radio" name="q5" value="2">2
       <input type="radio" name="q5" value="3">3
@@ -122,7 +122,7 @@
     </div>
 
     <div class="question">
-      <p>Q6. チーム目標や基準を明確に示し指導している。</p>
+      <p>Q6. チームの目標や仕事の基準を明確に示し、一貫性のある指導を心がけている。</p>
       <input type="radio" name="q6" value="1" required>1
       <input type="radio" name="q6" value="2">2
       <input type="radio" name="q6" value="3">3
